--- a/SMS.Web/Views/Guard/ConfirmLE.cshtml
+++ b/SMS.Web/Views/Guard/ConfirmLE.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SMS.Web.ViewModels.GuardViewModel
 
 @{
-    ViewBag.Title = " nhận về sớm";
+    ViewBag.Title = "Xác nhận về sớm";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
