--- a/SMS.Web/Views/Guard/ConfirmGO.cshtml
+++ b/SMS.Web/Views/Guard/ConfirmGO.cshtml
@@ -1,131 +1,185 @@
-﻿
+﻿@model SMS.Web.ViewModels.GuardViewModel
 @{
-    Layout = null;
+    ViewBag.Title = "Xác nhận ra ngoài";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
+<div class="form-horizontal">
+    <div class="card-header py-3">
+        <h5 class="m-0 font-weight-bold text-primary">BẢO VỆ XÁC NHẬN CÔNG NHÂN VIÊN RA NGOÀI</h5>
+    </div>
+    <!--Cột bên trái dành cho form đăng ký-->
+    <div class="col-md-12 row-form">
+        <div class="column form-horizontal form-left col-md-6">
+            <div class="form-group row-1 input-group">
+                <label class="control-label col-md-2 top-space lb">Mã CNV <span class="red">(*)</span></label>
+                <div class="col-md-7 input-group">
+                    <div class="top-space">
+                        <input type="hidden" id="go_outId" value="@Model.Go_Out.ID" />
+                        @Html.TextBoxFor(model => model.Go_Out.EmpCode, new { @id = "txtEmpCodeBI", @class = "form-control input-previous-button col-md-12", @readonly = "readonly" })
+                    </div>
+                </div>
+            </div>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-
-    <!-- Custom styles for this page -->
-    <link href="~/Assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link href="~/Assets/css/sb-admin-2.min.css" rel="stylesheet">
-    <link href="~/Assets/css/customize.css" rel="stylesheet" />
-
-    <title>Xác nhận ra ngoài</title>
-</head>
-<body>
-    <div class="form-horizontal">
-        <div class="card-header py-3">
-            <h5 class="m-0 font-weight-bold text-primary">BẢO VỆ XÁC NHẬN CÔNG NHÂN VIÊN RA NGOÀI</h5>
+            <div class="form-group input-group">
+                <label class="control-label col-md-2">Lý do <span class="red">(*)</span></label>
+                <div class="col-md-10">
+                    @Html.TextAreaFor(model => model.Go_Out.Reason, new { @class = "form-control col-md-12", @readonly = "readonly", @style = "resize: none" })
+                </div>
+            </div>
         </div>
-        <!--Cột bên trái dành cho form đăng ký-->
-        <div class="col-md-12 row-form">
-            <div class="column form-horizontal form-left col-md-6">
-                <div class="form-group row-1 input-group">
-                    <label class="control-label col-md-2 top-space lb">Mã CNV <span class="red">(*)</span></label>
-                    <div class="col-md-7 input-group">
-                        <div class="top-space">
-                            <input class="form-control input-previous-button col-md-12" id="txtEmpCodeBI" readonly />
-                            @*@Html.EditorFor(model => model.EmpCode, new { htmlAttributes = new { @id = "txtEmpCodeBI", @class = "form-control input-previous-button col-md-12" } })*@
-                            @*@Html.ValidationMessageFor(model => model.EmpCode, "", new { @class = "text-danger" })*@
 
-                        </div>
-                    </div>
-                </div>
+        <div class="column col-md-2 col-mid">
+            <i class=" fas fa-play"></i>
+        </div>
 
-                <div class="form-group input-group">
-                    <label class="control-label col-md-2">Lý do <span class="red">(*)</span></label>
-                    <div class="col-md-10">
-                        <textarea class="form-control col-md-12" style="resize: none" readonly></textarea>
-                        @*@Html.TextAreaFor(model => model.Reason, htmlAttributes: new { @class = "form-control col-md-12" })*@
-                        @*@Html.ValidationMessageFor(model => model.Reason, "", new { @class = "text-danger" })*@
-                    </div>
+
+        <!--Cột bên phải dành cho thông tin nhân viên-->
+        <div class="column form-horizontal form-right col-md-4">
+            <!--Ảnh profile-->
+            <div class="form-group col-12 profile-img">
+                <div class="img-profile">
+                    <img src="~/Assets/img/the-world.jpg" />
                 </div>
             </div>
-
-            <div class="column col-md-2 col-mid">
-                <i class=" fas fa-play"></i>
+            <!--Thông tin profile-->
+            <div class="form-group input-group profile">
+                <label class="control-label col-md-3">Họ và tên <span class="red">(*)</span></label>
+                @Html.TextBoxFor(model => model.Go_Out.FullName, new { @class = "form-control input-previous-button col-9 txtFullNameBI", @readonly = "readonly" })
             </div>
-
-
-            <!--Cột bên phải dành cho thông tin nhân viên-->
-            <div class="column form-horizontal form-right col-md-4">
-                <!--Ảnh profile-->
-                <div class="form-group col-12 profile-img">
-                    <div class="img-profile">
-                        <img src="~/Assets/img/the-world.jpg" />
-                    </div>
-                </div>
-                <!--Thông tin profile-->
-                <div class="form-group input-group profile">
-                    <label class="control-label col-md-3">Họ và tên <span class="red">(*)</span></label>
-                    <input readonly class="form-control input-previous-button col-9 txtFullNameBI" />
-                    @*@Html.EditorFor(model => model.FullName, new { htmlAttributes = new { @readonly = "readonly", @class = "form-control input-previous-button col-9 txtFullNameBI" } })
-                        @Html.ValidationMessageFor(model => model.FullName, "", new { @class = "text-danger info-required" })*@
-                </div>
-                <div class="form-group input-group profile">
-                    <label class="control-label col-md-3">Vị trí <span class="red">(*)</span></label>
-                    <input readonly class="form-control input-previous-button col-9 txtPositionBI" />
-                    @*@Html.EditorFor(model => model.Position, new { htmlAttributes = new { @readonly = "readonly", @class = "form-control input-previous-button col-9 txtPositionBI" } })
-                        @Html.ValidationMessageFor(model => model.Position, "", new { @class = "text-danger info-required" })*@
-                </div>
-                <div class="form-group input-group profile">
-                    <label class="control-label col-md-3">Phòng ban <span class="red">(*)</span></label>
-                    <input readonly class="form-control input-previous-button col-9 txtTeamBI" />
-                    @*@Html.EditorFor(model => model.Team, new { htmlAttributes = new { @readonly = "readonly", @class = "form-control input-previous-button col-9 txtTeamBI" } })
-                        @Html.ValidationMessageFor(model => model.Team, "", new { @class = "text-danger info-required" })*@
-                </div>
+            <div class="form-group input-group profile">
+                <label class="control-label col-md-3">Vị trí <span class="red">(*)</span></label>
+                @Html.TextBoxFor(model => model.Go_Out.Position, new { @class = "form-control input-previous-button col-9 txtFullNameBI", @readonly = "readonly" })
+            </div>
+            <div class="form-group input-group profile">
+                <label class="control-label col-md-3">Phòng ban <span class="red">(*)</span></label>
+                @Html.TextBoxFor(model => model.Go_Out.Team, new { @class = "form-control input-previous-button col-9 txtFullNameBI", @readonly = "readonly" })
             </div>
         </div>
     </div>
-    <br />
-    <div class="bottom">
-        <div style="width:100%; overflow-x:auto">
-            <!--Bảng dữ liệu Về sớm-->
-            <table class="table table-hover table-bordered" id="LE-table">
-                <!--Tiêu đề cột-->
-                <thead>
-                    <tr class="table-heading">
-                        <th>Thời gian ra ngoài</th>
-                        <th colspan="4">Bảo vệ xác nhận ra ngoài</th>
-                        <th>Thời gian trở lại</th>
-                        <th colspan="4">Bảo vệ xác nhận quay lại</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>EstimatedDateOut</td>
-                        <td>GuardOut</td>
-                        <td>
-                            <a data-id="" class="btn btn-primary btn-standard btn-admin-approve-LE" href="#" title="Phê duyệt"><i class="fas fa-check" style="margin-left: -4px"></i></a>
-                            <a data-id="" class="btn btn-danger btn-standard btn-admin-reject-LE" href="#" title="Không phê duyệt"><i class="fas fa-times" style="margin-left: -2.5px"></i></a>
-                        </td>
-                        <td>
-                            <input class="remark col-12" type="text" placeholder="Ghi chú..." />
-                        </td>
-                        <td>GuardOutDate</td>
-                        <td>EstimatedDateReturn</td>
-                        <td>GuardReturn</td>
-                        <td>
-                            <a data-id="" class="btn btn-primary btn-standard btn-admin-approve-LE" href="#" title="Phê duyệt"><i class="fas fa-check" style="margin-left: -4px"></i></a>
-                            <a data-id="" class="btn btn-danger btn-standard btn-admin-reject-LE" href="#" title="Không phê duyệt"><i class="fas fa-times" style="margin-left: -2.5px"></i></a>
-                        </td>
-                        <td>
-                            <input class="remark col-12" type="text" placeholder="Ghi chú..." />
-                        </td>
-                        <td>GuardReturnDate</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div style="text-align: center">
-            <label id="add-row-items" class="btn-cancel btn top-space" title="Trở lại" style="cursor: pointer">
-                <i class="fas fa-arrow-left"></i>&nbsp; Trở lại
-            </label>
-        </div>
+</div>
+<br />
+<div class="bottom">
+    <div style="width:100%; overflow-x:auto">
+        <!--Bảng dữ liệu Về sớm-->
+        <table class="table table-hover table-bordered" id="GO-table">
+            <!--Tiêu đề cột-->
+            <thead>
+                <tr class="table-heading">
+                    <th>Thời gian ra ngoài</th>
+                    <th colspan="4">Bảo vệ xác nhận ra ngoài</th>
+                    <th>Thời gian trở lại</th>
+                    <th colspan="4">Bảo vệ xác nhận quay lại</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>@Html.DisplayFor(m => m.Go_Out.EstimatedDateOut)</td>
+                    <td>@Html.DisplayFor(m => m.Go_Out.GuardOut)</td>
+                    <td>
+                        @if (Model.Go_Out.GuardStatusOut == null)
+                        {
+                            <a data-id="" class="btn btn-primary btn-standard btn-admin-approve-LE out_approve" href="#" title="Phê duyệt"><i class="fas fa-check" style="margin-left: -4px"></i></a>
+                            <a data-id="" class="btn btn-danger btn-standard btn-admin-reject-LE out_unapprove" href="#" title="Không phê duyệt"><i class="fas fa-times" style="margin-left: -2.5px"></i></a>
+                        }
+                        else if (Model.Go_Out.GuardStatusOut == 1)
+                        {
+                            <i class="fas fa-check"></i>
+                        }
+                        else
+                        {
+                            <i class="fas fa-times"></i>
+                        }
+                    </td>
+                    <td>
+                        <input class="out_remark col-12" type="text" placeholder="Ghi chú..."  value="@Model.Go_Out.GuardRemarkOut" />
+                    </td>
+                    <td>@Html.DisplayFor(m => m.Go_Out.GuardDateOut)</td>
+                    <td>@Html.DisplayFor(m => m.Go_Out.EstimatedDateReturn)</td>
+                    <td>@Html.DisplayFor(m => m.Go_Out.GuardReturn)</td>
+                    <td>
+                        @if (Model.Go_Out.GuardStatusReturn == null)
+                        {
+                            <a data-id="" class="btn btn-primary btn-standard btn-admin-approve-LE return_approve" href="#" title="Phê duyệt"><i class="fas fa-check " style="margin-left: -4px"></i></a>
+                            <a data-id="" class="btn btn-danger btn-standard btn-admin-reject-LE return_unapprove" href="#" title="Không phê duyệt"><i class="fas fa-times" style="margin-left: -2.5px"></i></a>
+                        }
+                        else if (Model.Go_Out.GuardStatusReturn == 1)
+                        {
+                            <i class="fas fa-check"></i>
+                        }
+                        else
+                        {
+                            <i class="fas fa-times"></i>
+                        }
+                    </td>
+                    <td>
+                        <input class="return_remark col-12" type="text" placeholder="Ghi chú..." value="@Model.Go_Out.GuardRemarkReturn" />
+                    </td>
+                    <td>@Html.DisplayFor(m => m.Go_Out.GuardDateReturn)</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
-</body>
-</html>
+    <div style="text-align: center">
+        <label id="return-queue" class="btn-cancel btn top-space" title="Trở lại" style="cursor: pointer">
+            <i class="fas fa-arrow-left"></i>&nbsp; Trở lại
+        </label>
+    </div>
+</div>
+@section scripts{
+    <script src="~/Assets/js/jquery-confirm.js"></script>
+    <script>
+        $('#return-queue').on("click", () => {
+            window.location.href = "/Guard/Queue"
+        })
+
+        function handle(url, data, reload = false) {
+            $.ajax({
+                url,
+                method: "POST",
+                data,
+                success: () => {
+                    if (reload)
+                        window.location.reload()
+                    else
+                        window.location.href = "/Guard/Queue" 
+                },
+                error: () => {
+                    alert("Lỗi hệ thống!")
+                }
+            })
+        }
+
+        $('#GO-table').on("click", ".out_approve", () => {
+            handle("/Guard/ApproveGoOut", {
+                id: $('#go_outId').val(),
+                remark: $("#out_remark").val(),
+                status: 1
+            }, true) 
+        })
+
+        $('#GO-table').on("click", ".out_unapprove", () => {
+            handle("/Guard/ApproveGoOut", {
+                id: $('#go_outId').val(),
+                remark: $("#out_remark").val(),
+                status: 0
+            }, true)
+        }) 
+        
+        $('#GO-table').on("click", ".return_approve", () => {
+            handle("/Guard/ApproveGoReturn", {
+                id: $('#go_outId').val(),
+                remark: $("return_remark").val(),
+                status: 1
+            })
+        })
+
+        $('#GO-table').on("click", ".return_unapprove", () => {
+            handle("/Guard/ApproveGoReturn", {
+                id: $('#go_outId').val(),
+                remark: $("return_remark").val(),
+                status: 0
+            })
+        })
+    </script>
+}
