--- a/SMS.Web/Views/Guard/Queue.cshtml
+++ b/SMS.Web/Views/Guard/Queue.cshtml
@@ -468,7 +468,7 @@
                                 }
                             </td>
                             <td>@item.Company</td>
-                            <td><a href="/Guard/ConfirmGuest/@item.ID" style="text-decoration:none">@item.FullName</a></td>
+                            <td><a href="/Guard/ConfirmGuestItem/@item.ID" style="text-decoration:none">@item.FullName</a></td>
                             <td>@item.IDCard</td>
                             <td>@item.NumbersOfPerson</td>
                             <td>@item.Purpose</td>
@@ -654,7 +654,7 @@
                                 }
                             </td>
                             <td>@item.Company</td>
-                            <td><a href="/Guard/ConfirmGuest/@item.ID" style="text-decoration:none">@item.FullName</a></td>
+                            <td><a href="/Guard/ConfirmGuestItem/@item.ID" style="text-decoration:none">@item.FullName</a></td>
                             <td>@item.IDCard</td>
                             <td>@item.NumbersOfPerson</td>
                             <td>@item.Purpose</td>
